--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <title>About Me</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- link responsive stylesheet -->
+    <link rel="stylesheet" href="css/responsive.css">
+
 
 </head>
 
@@ -32,7 +35,7 @@
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/landmammal">Github</a></li>
         </ul>
     </footer>
 </body>
