--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- link responsive stylesheet -->
     <link rel="stylesheet" href="css/responsive.css">
 
+    <!-- bootstrap CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 </head>
 
@@ -18,6 +20,16 @@
         <p class='masthead-intro'>Hi I'm</p>
         <h1 class='masthead-heading'>Roger Rockstar</h1>
     </header>
+
+    <nav>
+      <ul>
+        <li> <a href="#">Contact</a> </li>
+        <li> <a href="#">Projects</a> </li>
+        <li> <a href="#">About</a> </li>
+      </ul>
+    </nav>
+
+
     <section class="details">
       <h1>Introduction</h1>
       <p>Details here...</p>
