--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
         <p class='masthead-intro'>Hi I'm</p>
         <h1 class='masthead-heading'>Roger Rockstar</h1>
     </header>
-
-    <nav>
-      <ul>
-        <li> <a href="#">Contact</a> </li>
-        <li> <a href="#">Projects</a> </li>
-        <li> <a href="#">About</a> </li>
-      </ul>
+    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+      <div class="container" >
+        <!-- brand logo -->
+        <a class="navbar-brand" href="">RR</a>
+        <!-- group our links -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0" >
+            <li class="nav-item" > <a class="nav-link" href="#">Contact</a> </li>
+            <li class="nav-item" > <a class="nav-link" href="#">Projects</a> </li>
+            <li class="nav-item active" > <a class="nav-link" href="#">About</a> </li>
+          </ul>           
+        </div>
+      </div>
     </nav>
 
 
